[package]
name = "twitch-helix"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"

[dependencies]

# Web
url = "2.1"
reqwest = { version = "0.10", features = ["json"] }

# Error
thiserror = "1.0"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data
chrono = {version = "0.4", features = ["serde"]}
unicase = "2.6"
