[package]
name = "twitch-helix"
version = "0.2.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
description = "API to interact with twitch's Helix API"
license-file = "LICENSE"
repository = "https://github.com/Zenithsiz/twitch-helix/"
keywords = ["twitch", "web"]
categories = ["web-programming::http-client"]

[features]
default = ["client"]
client = ["reqwest"]

[dependencies]

# Web
url = "2.2.0"
reqwest = { version = "0.10.10", features = ["json"], optional = true }

# Error
thiserror = "1.0.23"

# Serde
serde = { version = "1.0.118", features = ["derive"] }

# Data
chrono = { version = "0.4.19", features = ["serde"] }

[dev-dependencies]

serde_json = "1.0.61"
